Added close button to create post.

--- a/src/pages/forum/forum.module.css
+++ b/src/pages/forum/forum.module.css
@@ -49,6 +49,20 @@
     text-align: center;
 }
 
+.titleContainer{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.close{
+    color: red;
+    cursor: pointer;
+    font-size: 25px;
+    margin: 0;
+}
+
 
 @media all and (min-width: 360px) {
     .main{
