--- a/src/pages/forum/forum.module.css
+++ b/src/pages/forum/forum.module.css
@@ -20,11 +20,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-
-.post{
-    min-height: 30vh;
-    font-size: 20px;
+    align-items: center;
 }
 
 .container{
@@ -56,11 +52,20 @@
     gap: 15px;
 }
 
+.createpost{
+    cursor: pointer;
+    margin: 0;
+}
+
 .close{
     color: red;
     cursor: pointer;
     font-size: 25px;
     margin: 0;
+}
+
+.arrow{
+    cursor: pointer;
 }
 
 
