--- a/src/pages/about/about.module.css
+++ b/src/pages/about/about.module.css
@@ -1,18 +1,23 @@
 .about {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 20px;
-	margin: 50px 0;
-	justify-content: center;
-	align-items: start;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: start;
 }
 
 .content {
-	margin: 0 auto;
-	padding: 20px;
-	padding-top: 110px;
+  margin: 0 auto;
+  padding: 20px;
+  padding-top: 110px;
 }
 
 .paragraph {
-	text-align: left;
+  text-align: left;
+}
+
+.missionText {
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
