remove mobile nav context providers.

--- a/src/components/FinalProject/FinalProject.module.css
+++ b/src/components/FinalProject/FinalProject.module.css
@@ -63,7 +63,7 @@
 .sendMessageContainer {
   display: flex;
   gap: 15px;
-  max-width: 100%;
+  min-width: 100%;
   justify-content: flex-start;
 }
 
